--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node server.js",
-    "test": "jest",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "NotepadguyOfficial",
