Update API token handling and fix profile image URL in user registration and login

--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,8 @@ SECRET_TOKEN=
 #API Key
 GOOGLE_MAPS_API_KEY=
 
+#API Token
+API_TOKEN=
+
 #Logs and etc..
 LOGS_PATH= #absolute path e.g C:\Users\Admin\Desktop\Project\Capstone\Logs
