feat: integrate Vonage API for user verification
- Added Vonage API key and secret to .env.example
- Updated README.md to include new error code for Vonage verification
- Changed workflow name from 'development' to 'Development'
- Modified help command to log available commands using Logs.info
- Implemented user verification endpoints in Public.js using Vonage SDK
- Added @vonage/server-sdk dependency to package.json and package-lock.json
- Enhanced logging functionality in Logs.js to include caller location

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,8 @@ GOOGLE_MAPS_API_KEY=
 
 #API Token
 API_TOKEN=
+VONAGE_API_KEY=
+VONAGE_API_SECRET=
 
 #Logs and etc..
 LOGS_PATH= #absolute path e.g C:\Users\Admin\Desktop\Project\Capstone\Logs
